--- a/index.html
+++ b/index.html
@@ -420,9 +420,10 @@
               <div class="card-body card-body-content">
                 <h6>Accomplishments and Responsibilities:</h6>
                 <p class="card-text"><ul>
-<li>Improved the performance of a car dealership website (.NET) by 30% by refactoring website's controller and reducing it's response time.</li>
+<li>Worked directly with CTO to find and solve technical issues in a car dealership website (.NET).</li>
+<li>Improved the performance of the website by 30% by refactoring website's controller and reducing it's response time.</li>
 <li>Enhanced website's maintainability by updating it's admin panel.</li>
-<li>Achieved a 500% increase in number of active ads up to 25,000 ads by updaeting and improving general purpose ad crawler of the website.</li>
+<li>Achieved a 500% increase in the number of active ads up to 25,000 ads by updaeting and improving general purpose ad crawler of the website.</li>
 </ul></p>
               </div>
             </div>
