deploy: AlirezaTheH/portfolio@e5140405b957058ee66cd789bb78c3db41e79303

--- a/index.html
+++ b/index.html
@@ -1302,9 +1302,13 @@
               </div>
               <div class="col-md-9 bg-contributions-card" id="card-content">
                 <div class="card-body card-body-content">
-                  <p>Add edge direction by source or target node color</p>
+                  <h6>Contribution:</h6>
+                  <p><ul>
+<li>Added edge direction by source or target node color</li>
+<li>Fixed an edges line width issue</li>
+</ul></p>
                   <a class="badge rounded-pill"
-                     href="https://github.com/ericmjl/nxviz/pulls?q=is%3Apr+author%3Aalirezatheh+is%3Aclosed"
+                     href="https://github.com/ericmjl/nxviz/pulls?q=is%3Apr+author%3Aalirezatheh+is%3Amerged"
                      target="_blank">
                     Pull Requests
                   </a>
@@ -1323,9 +1327,12 @@
               </div>
               <div class="col-md-9 bg-contributions-card" id="card-content">
                 <div class="card-body card-body-content">
-                  <p>Add Perke to tools</p>
+                  <h6>Contribution:</h6>
+                  <p><ul>
+<li>Added Perke to tools</li>
+</ul></p>
                   <a class="badge rounded-pill"
-                     href="https://github.com/mhbashari/awesome-persian-nlp-ir/pulls?q=is%3Apr+author%3Aalirezatheh+is%3Aclosed+"
+                     href="https://github.com/mhbashari/awesome-persian-nlp-ir/pulls?q=is%3Apr+author%3Aalirezatheh+is%3Amerged"
                      target="_blank">
                     Pull Requests
                   </a>
