--- a/index.html
+++ b/index.html
@@ -1306,6 +1306,7 @@
                   <p><ul>
 <li>Added edge direction by source or target node color</li>
 <li>Fixed an edges line width issue</li>
+<li>Fixed nodes and edges transparency bounds issues</li>
 </ul></p>
                   <a class="badge rounded-pill"
                      href="https://github.com/ericmjl/nxviz/pulls?q=is%3Apr+author%3Aalirezatheh+is%3Amerged"
