deploy: AlirezaTheH/portfolio@515cc4839ce1ceae25541a821ddcd965434bf2b8

--- a/index.html
+++ b/index.html
@@ -1322,6 +1322,30 @@
             <div class="row g-0">
               <div class="col-md-3 bg-dark5" id="card-title">
                 <div class="card-body">
+                  <h5 class="card-title">awesome-nlp</h5>
+                  <small>A curated list of resources dedicated to Natural Language Processing</small>
+                </div>
+              </div>
+              <div class="col-md-9 bg-contributions-card" id="card-content">
+                <div class="card-body card-body-content">
+                  <h6>Contribution:</h6>
+                  <p><ul>
+<li>Add NLP in Persian section containing an abstract of most useful Persian resources</li>
+</ul></p>
+                  <a class="badge rounded-pill"
+                     href="https://github.com/keon/awesome-nlp/pulls?q=is%3Apr+author%3Aalirezatheh+is%3Amerged"
+                     target="_blank">
+                    Pull Requests
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="card box-shadow">
+            <div class="row g-0">
+              <div class="col-md-3 bg-dark5" id="card-title">
+                <div class="card-body">
                   <h5 class="card-title">Awesome Persian NLP/IR</h5>
                   <small>Curated List of Persian Natural Language Processing and Information Retrieval Tools and Resources</small>
                 </div>
