deploy: AlirezaTheH/portfolio@a8661bd9c712d1d9a126a2f8c44bb62fa6082364

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <br>
         <div class="headshot-container">
           <img class="headshot-bw box-shadow rounded-circle"
-             src="./static/images/headshot-bw.jpg">
+               src="./static/images/headshot-bw.jpg">
           <img class="headshot-color box-shadow rounded-circle"
-             src="./static/images/headshot-color.jpg">
+               src="./static/images/headshot-color.jpg">
         </div>
 
         <!-- About and name -->
@@ -1307,6 +1307,7 @@
 <li>Added edge direction by source or target node color</li>
 <li>Fixed an edges line width issue</li>
 <li>Fixed nodes and edges transparency bounds issues</li>
+<li>Added node label annotation functions</li>
 </ul></p>
                   <a class="badge rounded-pill"
                      href="https://github.com/ericmjl/nxviz/pulls?q=is%3Apr+author%3Aalirezatheh+is%3Amerged"
