deploy: AlirezaTheH/portfolio@50473f727ffa39432738c269927d882a6b661efb

--- a/index.html
+++ b/index.html
@@ -1308,6 +1308,7 @@
 <li>Fixed an edges line width issue</li>
 <li>Fixed nodes and edges transparency bounds issues</li>
 <li>Added node label annotation functions</li>
+<li>Added font support for group and node label annotations</li>
 </ul></p>
                   <a class="badge rounded-pill"
                      href="https://github.com/ericmjl/nxviz/pulls?q=is%3Apr+author%3Aalirezatheh+is%3Amerged"
