deploy: AlirezaTheH/portfolio@e284ba556abdaeee825fec90c3948331d2674eb4

--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
                 <h6>Accomplishments and Responsibilities:</h6>
                 <p class="card-text"><ul>
 <li>Designed and implemented predictive models for assessing material quality (milk, wheat) from various suppliers, leveraging machine learning to enhance accuracy and reduce dependency on costly manual inspections and lab experiments in the supply chain.</li>
-<li>Developed and deployed multiple novelty detection systems in the production line using YOLO (You Only Look Once) and Variational Autoencoders (VAEs) to identify anomalies, enhancing product quality and operational efficiency.</li>
-<li>Engineered and launched face verification systems for factory lab security using YOLO for real-time identification and VGGFace for deep facial recognition, significantly improving security measures and access control protocols.</li>
+<li>Developed and deployed multiple novelty detection systems within the production line utilizing YOLO for real-time object detection and Variational Autoencoders (VAEs) to identify anomalies, leading to improved product quality and operational efficiency.</li>
+<li>Engineered and launched a face verification system for enhanced factory lab security. This system utilized YOLO for real-time face detection, VGGFace for accurate face verification, and a transformer-based anti-spoofing network to mitigate presentation attacks, significantly strengthening security measures and access control protocols.</li>
 </ul></p>
               </div>
             </div>
@@ -389,6 +389,7 @@
                 <h6>Accomplishments and Responsibilities:</h6>
                 <p class="card-text"><ul>
 <li>Engineered a comprehensive approach resulting in a 100% surge in an e-book platform user base to 400,000 and a doubled renewal rate, through design of a marketing SDK based on analyzing and efficient clustering user behavior history, and successful implementation of marketing campaigns.</li>
+<li>Resolved a team bottleneck by developing an auto SQL query generator by prompt engineering an LLM, automating complex queries for the marketing team, enhancing productivity.</li>
 <li>Innovated and implemented a scalable recommender system utilizing collaborative filtering and clustering algorithms. Resulted in a 10% increase in renewal rates by providing personalized book recommendations based on user engagement patterns.</li>
 <li>Pioneered the development of a graph-based keyphrase extractor system, revolutionizing content organization by generating robust tags for books and articles, enhancing database organization and information retrieval processes.</li>
 <li>Boosted user win-back rate by 10% through crafting a semi-supervised discount generator architecture, leveraging deep insights from user engagement patterns and purchase history analysis.</li>
