deploy: AlirezaTheH/portfolio@99b719a5593b6447f3d039c0fda9097b2a9571e6

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 <h6>Accomplishments and Responsibilities:</h6>
                 <p class="card-text"><ul>
 <li>Engineered a comprehensive approach resulting in a 100% surge in an e-book platform user base to 400,000 and a doubled renewal rate, through design of a marketing SDK based on analyzing and efficient clustering user behavior history, and successful implementation of marketing campaigns.</li>
-<li>Resolved a team bottleneck by developing an auto SQL query generator by prompt engineering an LLM, automating complex queries for the marketing team, enhancing productivity.</li>
+<li>Resolved a team bottleneck by developing an auto SQL query generator by prompt engineering LLMs, automating complex queries for the marketing team, enhancing productivity.</li>
 <li>Innovated and implemented a scalable recommender system utilizing collaborative filtering and clustering algorithms. Resulted in a 10% increase in renewal rates by providing personalized book recommendations based on user engagement patterns.</li>
 <li>Pioneered the development of a graph-based keyphrase extractor system, revolutionizing content organization by generating robust tags for books and articles, enhancing database organization and information retrieval processes.</li>
 <li>Boosted user win-back rate by 10% through crafting a semi-supervised discount generator architecture, leveraging deep insights from user engagement patterns and purchase history analysis.</li>
